--- a/Yearning/src/main/webapp/resources/css/original_styles.css
+++ b/Yearning/src/main/webapp/resources/css/original_styles.css
@@ -11562,7 +11562,7 @@ body {
   height: auto;
   min-height: 35rem;
   padding: 15rem 0;
-  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000 100%), url("https://ifh.cc/g/XyyWyX.jpg");
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000 100%), url("../assets/img/bg-masthead.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -11575,8 +11575,11 @@ body {
   letter-spacing: 0.8rem;
   background: linear-gradient(rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0));
   -webkit-text-fill-color: transparent;
+  -webkit-transition: background-image 0.2s ease-in-out;
+transition: background-image 0.2s ease-in-out;
   -webkit-background-clip: text;
           background-clip: text;
+         
 }
 .masthead h2, .masthead .h2 {
   max-width: 20rem;
@@ -11613,6 +11616,7 @@ body {
 }
 
 .projects-section {
+  padding: 10rem 0;
 }
 .projects-section .featured-text {
   padding: 2rem;
