헤더 이미지 수정 완료

--- a/Yearning/src/main/webapp/resources/css/styles.css
+++ b/Yearning/src/main/webapp/resources/css/styles.css
@@ -531,8 +531,9 @@ progress {
 
 .display-4 {
   font-size: calc(1.475rem + 2.7vw);
-  font-weight: 300;
+  font-weight: 600;
   line-height: 1.2;
+  color: #fff;
 }
 @media (min-width: 1200px) {
   .display-4 {
@@ -545,6 +546,7 @@ progress {
   font-weight: 300;
   line-height: 1.2;
 }
+                    
 @media (min-width: 1200px) {
   .display-5 {
     font-size: 3rem;
